# CoveragePathPlanning

./: .gitignore  LICENSE  README.md  nav2_params.yaml
CPP/maps/: map4.pgm  map4.yaml
CPP/scripts/: boustrophedon.py  choset.py  spiral.py  water.py
my_gazebo_maps/: package.xml  setup.cfg  setup.py
my_gazebo_maps/launch/: gazebo_launch.py
my_gazebo_maps/worlds/: map4.world
