<?xml version="1.0"?>
<package format="3">
  <name>my_gazebo_maps</name>
  <version>0.0.1</version>
  <description>Paczka z mapami do Gazebo w ROS 2</description>
  <maintainer email="bartek@todo.todo">bartek</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend> <!-- Optional -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
